manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: athlete-service
spec:
  selector:
    app: athlete
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
