manifests/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress
metadata:
  name: ingress-app
spec:
  ingressClassName: nginx
  rules:
    #- host:local.arcesium.org
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: athlete-service
                port:
                  number: 80
